<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Greenhouse</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register_prompt">Register here</string>
    <string name="register">Register</string>
    <string name="register_page_title">Create an Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email Address</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login_prompt">Login here</string>
    <string name="temperature">Temperature</string>
    <string name="precipitation">Precipitation</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="control">CONTROL</string>
    <string name="Humidity">Humidity</string>
    <string name="acidity">Acidity</string>
    <string name="watering_system">Watering System</string>
    <string name="window_control">Windows Control</string>
    <string name="notes">Notes</string>
    <string name="add_note">ADD NOTE</string>
    <string name="edit_note">EDIT NOTE</string>
    <string name="delete_note">DELETE NOTE</string>
    <string name="photos">Photos</string>
    <string name="add_photo">ADD PHOTO FROM GALLERY</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme preference</string>
    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="privacy_secrity">Privacy and security</string>
    <string name="log_out">Log out</string>
    <string name="hint">Greenhouse name</string>
    <string name="no_location">No location selected</string>
    <string name="pick_location">Pick location</string>
    <string name="save">Save</string>
    <string name="enter_note">Enter your note</string>
    <string name="cancel">Cancel</string>
</resources>
