<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"/>

    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_location"
        android:textSize="16sp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/button_pick_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_location"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp"/>

</LinearLayout>
