<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/green">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/greenhouselogo"
        android:contentDescription="Logo"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/green"
        android:background="@drawable/rounded_edittext"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/dark_green" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/dark_green" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_prompt"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp" />

</LinearLayout>
