<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/button_add_greenhouse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Add Greenhouse"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/plus" />

        <ImageButton
            android:id="@+id/button_edit_greenhouse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pencil"
            android:contentDescription="Edit Greenhouse"
            android:background="?attr/selectableItemBackground"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_marginStart="8dp" />

        <ImageButton
            android:id="@+id/button_delete_greenhouse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/trash"
            android:contentDescription="Delete Greenhouse"
            android:background="?attr/selectableItemBackground"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_greenhouses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_dashboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dashboard"
            android:background="@drawable/button_selector"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/control"
            android:background="@drawable/button_selector"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:background="@drawable/button_selector"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
